// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FoldOut should have a height when open 1`] = `
.c0 {
  -webkit-transition: height 300ms cubic-bezier(0.5,0,0.1,1);
  transition: height 300ms cubic-bezier(0.5,0,0.1,1);
  overflow: hidden;
  height: 900px;
}

<div
  className="c0"
>
  <div />
</div>
`;

exports[`FoldOut should have no height when closed 1`] = `
.c0 {
  -webkit-transition: height 300ms cubic-bezier(0.5,0,0.1,1);
  transition: height 300ms cubic-bezier(0.5,0,0.1,1);
  overflow: hidden;
  height: 0;
}

<div
  className="c0"
>
  <div />
</div>
`;

exports[`FoldOut should use the fallback and warn once ResizeObserver is not available or throws 1`] = `
.c0 {
  -webkit-transition: height 300ms cubic-bezier(0.5,0,0.1,1);
  transition: height 300ms cubic-bezier(0.5,0,0.1,1);
  overflow: hidden;
  height: auto;
}

<div
  className="c0"
>
  <div />
</div>
`;
